--- a/index.html
+++ b/index.html
@@ -2008,10 +2008,11 @@ global warming to 1.5°C (50% probability) according to IPCC A6 WG1
 gas emission from 2019 was added to this budget. The calculated carbon
 budget for 2019 was then divided with the average population and the
 remaining years until 2050, see Equation 1.</p>
-</div>
-</div>
-<div id="equation" class="section level1">
-<h1>EQUATION</h1>
+<p><span class="math display">\[\begin{equation}
+\tag{Eq. 1}
+carbon\_budget_{per\_capita\_and\_year\_until\_2050} =
+\frac{carbon\_budget\_2019}{pop\_avg \cdot years \_left}
+\end{equation}\]</span></p>
 <p>The year 2050 was chosen as it is the year UNDP mentions in their
 emission goal to reach global net zero emission of CO2. Which is related
 to the thirteenth sustainable development goal: Climate action (UNDP,
@@ -2021,6 +2022,7 @@ to the thirteenth sustainable development goal: Climate action (UNDP,
 to answer each specific research question. This was done in R and will
 not be covered in this chapter. For the continued cleaning process it is
 recommended to read the appendix for the respective report part.</p>
+</div>
 <div id="statistical-methods-and-tests" class="section level3">
 <h3>Statistical methods and tests</h3>
 <p>This sub-section will explain the workflow related to the statistical
