Fixed and formated tables for results for part 4

--- a/index.html
+++ b/index.html
@@ -2331,10 +2331,75 @@ nuance of the results, the individual chi-square components were
 analyzed, see Table 4.</p>
 <p>Table 4. Individual chi-square components from the chi-square
 test.</p>
+<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="empty-cells: hide;border-bottom:hidden;" colspan="1">
+</th>
+<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+Budget comparison
 </div>
-</div>
-<div id="table" class="section level1">
-<h1>TABLE</h1>
+</th>
+</tr>
+<tr>
+<th style="text-align:left;">
+</th>
+<th style="text-align:right;">
+Over
+</th>
+<th style="text-align:right;">
+Under
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+High income
+</td>
+<td style="text-align:right;">
+3.20
+</td>
+<td style="text-align:right;">
+12.00
+</td>
+</tr>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+Upper middle income
+</td>
+<td style="text-align:right;">
+2.92
+</td>
+<td style="text-align:right;">
+10.95
+</td>
+</tr>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+Lower middle income
+</td>
+<td style="text-align:right;">
+2.32
+</td>
+<td style="text-align:right;">
+8.68
+</td>
+</tr>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+Low income
+</td>
+<td style="text-align:right;">
+7.77
+</td>
+<td style="text-align:right;">
+29.14
+</td>
+</tr>
+</tbody>
+</table>
 <p>The largest individual chi-square value was for Low income and Under
 (29.14) which was contributing approximately 38% of the total chi-square
 value of 76.97, i.e. this association has had a large effect on the
@@ -2369,11 +2434,121 @@ association.</p>
 <p>Table 5. Expected frequency of countries fulfilling the 2019 carbon
 budget per capita and year until 2050. The deviation of the observed
 frequency compared to the expected frequency in parenthesis.</p>
+<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="empty-cells: hide;border-bottom:hidden;" colspan="1">
+</th>
+<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="4">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+Budget comparison
 </div>
-<div id="table-1" class="section level1">
-<h1>TABLE</h1>
+</th>
+</tr>
+<tr>
+<th style="empty-cells: hide;border-bottom:hidden;" colspan="1">
+</th>
+<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+Expected frequency
+</div>
+</th>
+<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2">
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+Difference
+</div>
+</th>
+</tr>
+<tr>
+<th style="text-align:left;">
+</th>
+<th style="text-align:right;">
+Over
+</th>
+<th style="text-align:right;">
+Under
+</th>
+<th style="text-align:right;">
+Over
+</th>
+<th style="text-align:right;">
+Under
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+High income
+</td>
+<td style="text-align:right;">
+45.0
+</td>
+<td style="text-align:right;">
+12.0
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+12.0
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+-12.0
+</td>
+</tr>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+Upper middle income
+</td>
+<td style="text-align:right;">
+41.1
+</td>
+<td style="text-align:right;">
+10.9
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+10.9
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+-10.9
+</td>
+</tr>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+Lower middle income
+</td>
+<td style="text-align:right;">
+41.8
+</td>
+<td style="text-align:right;">
+11.2
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+-9.8
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+9.8
+</td>
+</tr>
+<tr>
+<td style="text-align:left;font-weight: bold;">
+Low income
+</td>
+<td style="text-align:right;">
+22.1
+</td>
+<td style="text-align:right;">
+5.9
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+-13.1
+</td>
+<td style="text-align:right;background-color: #f2f2f2 !important;">
+13.1
+</td>
+</tr>
+</tbody>
+</table>
 <p>There had been 19 observations on low income countries under the
-carbon budget per capita and year. As seen in Table X, if only chance
+carbon budget per capita and year. As seen in Table 5, if only chance
 would have affected their choice the expected frequency would have been
 around 6, i.e the large individual chi square value of 29.14 should be
 interpreted as low income countries emitted under the carbon budget per
@@ -2391,6 +2566,7 @@ exp. ~22), so did lower middle income countries (obs. 32, exp. ~42).
 High income countries (obs. 57, exp. ~45) and upper middle income
 countries (obs. 52, exp. ~41) both emitted over the carbon budget more
 than expected.</p>
+</div>
 </div>
 
 
