Wrote discussion with conclusions

--- a/index.html
+++ b/index.html
@@ -2568,6 +2568,91 @@ countries (obs. 52, exp. ~41) both emitted over the carbon budget more
 than expected.</p>
 </div>
 </div>
+<div id="discussion" class="section level2">
+<h2>Discussion</h2>
+<p>This section will discuss the methodology, the findings, and draw
+conclusions.</p>
+<div id="choice-of-data" class="section level3">
+<h3>Choice of Data</h3>
+<p>This report focuses on total GHG emissions per country. If instead
+GHG emission per capita for each country would have been chosen the
+results may have had another outcome. Also, the chosen data does not
+consider within-country inequalities in income. It is possible that
+there are huge emitters in low-income countries and low emitters in
+high-income countries.</p>
+<p>Additionally, it is not known how the total GHG emission is
+calculated, and which country the emission is recorded in when it comes
+to offshore consumption (export), same goes for tourism and other
+activities performed by individuals living in another country from where
+the emission is being produced.</p>
+</div>
+<div id="result-1" class="section level3">
+<h3>Result</h3>
+<p>The Wilcoxon rank-sum test in part 2 of this report and the
+Kruskal-Wallis rank sum test in part 3 gave different results.
+Considering the same data for low-income and high-income countries was
+used, either the Wilcoxon rank-sum test should have indicated that there
+was no significant difference between the income groups. Or, the
+Kruskal-Wallis rank sum test should have shown that there was a
+significant difference between at least two groups, and post-hoc would
+have shown that there was a difference between high-income and
+low-income countries in terms of GHG emissions. However, observing the
+boxplots of the two parts, Figure 3 (boxplot for part 2) shows it is
+likely to be a difference as the median line of the high-income box lies
+outside of the low-income box entirely. The same goes for the boxes in
+Figure 4 (boxplot for part 3).</p>
+<p>Hence, the opposing test results might be due to how the different
+tests work. Although they are both non-parametric tests, maybe the
+Wilcoxon rank-sum test is less sensitive than the Kruskal-Wallis rank
+sum test. It is also possible that the difference between the tests
+might be because the data was transformed in part 3, but not in part 2.
+Regardless, this is a topic for further research.</p>
+</div>
+<div id="conclusion" class="section level3">
+<h3>Conclusion</h3>
+<p><em>Q1. Has the total greenhouse gas emissions globally per year
+increased from 1990 to 2019?</em></p>
+<p>Yes. Based on the sample, the total GHG emissions globally per year
+increased from 1990 to 2019. It was found that the year significantly
+predicted the total emission of GHGs (<span class="math inline">\(\beta\)</span> = 0.0079, p = &lt; .001), using the
+regression model <span class="math inline">\(log_{10}(GHG \; emission) =
+0.0079(year) − 8.3\)</span>. The regression was statistically
+significant (R2 = .97, F(28, 1) = 1122, p &lt; .001).</p>
+<p><em>Q2. Was there a difference in greenhouse gas emissions between
+low-income and high-income countries in 2019?</em></p>
+<p>Yes. There was a significant difference between the groups in terms
+of median greenhouse gas emission in 2019 (W=1040, p = .024, <span class="math inline">\(\eta_{high}\)</span>=57, <span class="math inline">\(\eta_{low}\)</span>=28 Wilcoxon’s rank-sum test).
+The median greenhouse gas emission in the high-income group was 60
+590kt, whereas the median greenhouse gas emission in the low-income
+group was 29 110kt. Based on the medians, high-income countries released
+more than twice, 31 480kt, more greenhouse gases than low-income
+countries.</p>
+<p><em>Q3. Was there a difference in greenhouse gas emissions between
+the income groups low, lower middle, upper middle, and high income in
+2019?</em></p>
+<p>No. Significant differences in greenhouse gas emissions during 2019
+were not observed between countries in the four income groups, high
+income (Mdn=60590), upper middle income (Mdn=21915), lower middle income
+(Mdn=30530), and low income (Mdn=29110) (<span class="math inline">\(\chi^2\)</span>(3)=4.891, p=.18, Kruskal-Wallis
+rank sum test).</p>
+<p><em>Q4. Are there any significant associations between a country’s
+fulfillment of the 2019 carbon budget per person and year and their
+assigned income group?</em></p>
+<p>Yes. There was a significant association between income group and
+carbon budget fulfillment ((<span class="math inline">\(\chi^2\)</span>)=76.97, df=3, p&lt;.001, <span class="math inline">\(\chi^2\)</span>-test for association). Low income
+countries emitted under the carbon budget per capita and year until 2050
+much more than expected (obs. 19, exp. ~6). High income countries
+emitted under the carbon budget less than expected (obs. 0, exp. 12).
+Upper middle income countries emitted under the carbon budget less than
+expected (obs. 3, exp. ~11) whereas lower middle income countries
+emitted under the carbon budget more than expected (obs. 21, exp. ~11).
+Low income countries emitted over the carbon budget less than expected
+(obs. 9, exp. ~22), so did lower middle income countries (obs. 32, exp.
+~42). High income countries (obs. 57, exp. ~45) and upper middle income
+countries (obs. 52, exp. ~41) both emitted over the carbon budget more
+than expected.</p>
+</div>
+</div>
 
 
 
