--- a/index.html
+++ b/index.html
@@ -2683,6 +2683,66 @@ CO2 equivalent). <a href="https://data.worldbank.org/indicator/EN.ATM.GHGT.KT.CE
 <p>World Bank. (2023b, January 9). Population, total. <a href="https://data.worldbank.org/indicator/SP.POP.TOTL?end=2019&amp;start=2019&amp;view=chart" class="uri">https://data.worldbank.org/indicator/SP.POP.TOTL?end=2019&amp;start=2019&amp;view=chart</a></p>
 <p>World Bank. (2023c, January 9). Countries and Economies. <a href="https://data.worldbank.org/country" class="uri">https://data.worldbank.org/country</a></p>
 </div>
+<div id="appendix" class="section level2">
+<h2>Appendix</h2>
+<div id="data-preparation" class="section level3">
+<h3>Data preparation</h3>
+<p>This appendix contains a list of all economies, regions, etc., that
+was removed during the data preparation.</p>
+<p>The following economies were removed:</p>
+<ul>
+<li>Africa Eastern and Southern</li>
+<li>Africa Western and Central</li>
+<li>Arab World</li>
+<li>Caribbean small states</li>
+<li>Central Europe and the Baltics</li>
+<li>Early-demographic dividend</li>
+<li>East Asia &amp; Pacific</li>
+<li>East Asia &amp; Pacific (excluding high income)</li>
+<li>East Asia &amp; Pacific (IDA &amp; IBRD countries)</li>
+<li>Euro area</li>
+<li>Europe &amp; Central Asia</li>
+<li>Europe &amp; Central Asia (excluding high income)</li>
+<li>Europe &amp; Central Asia (IDA &amp; IBRD countries)</li>
+<li>European Union</li>
+<li>Fragile and conflict affected situations</li>
+<li>Heavily indebted poor countries (HIPC)</li>
+<li>High income</li>
+<li>IBRD only</li>
+<li>IDA &amp; IBRD total</li>
+<li>IDA blend</li>
+<li>IDA only</li>
+<li>IDA total</li>
+<li>Late-demographic dividend</li>
+<li>Latin America &amp; Caribbean</li>
+<li>Latin America &amp; Caribbean (excluding high income)</li>
+<li>Latin America &amp; the Caribbean (IDA &amp; IBRD countries)</li>
+<li>Least developed countries: UN classification</li>
+<li>Low &amp; middle income</li>
+<li>Low income</li>
+<li>Lower middle income</li>
+<li>Middle East &amp; North Africa</li>
+<li>Middle East &amp; North Africa (excluding high income)</li>
+<li>Middle East &amp; North Africa (IDA &amp; IBRD countries)</li>
+<li>Middle income</li>
+<li>North America</li>
+<li>Not classified</li>
+<li>OECD members</li>
+<li>Other small states</li>
+<li>Pacific island small states</li>
+<li>Post-demographic dividend</li>
+<li>Pre-demographic dividend</li>
+<li>Small states</li>
+<li>South Asia</li>
+<li>South Asia (IDA &amp; IBRD)</li>
+<li>Sub-Saharan Africa</li>
+<li>Sub-Saharan Africa (excluding high income)</li>
+<li>Sub-Saharan Africa (IDA &amp; IBRD countries)</li>
+<li>Upper middle income</li>
+<li>World</li>
+</ul>
+</div>
+</div>
 
 
 
