Added cross-ref to tables in method section

--- a/index.html
+++ b/index.html
@@ -1728,9 +1728,11 @@ border-radius: 0px;
 <div id="data-preparation-and-cleaning" class="section level3" number="0.2.2">
 <h3><span class="header-section-number">0.2.2</span> Data preparation and cleaning</h3>
 <p>The data was prepared in two different stages, first in Excel and then in R. For both imported workbooks, the main data sheet was transformed and then saved as a CSV file. These CSV files were then imported into R where the transformation and cleaning of the data continued.</p>
-<p>First, the Excel workbook containing data for the total greenhouse gas emissions was prepared and cleaned. Table 1 shows changes made to the sheet containing the main data.</p>
-<p>Table 1. Changes made to greenhouse gas emission data in both Excel and R.</p>
+<p>First, the Excel workbook containing data for the total greenhouse gas emissions was prepared and cleaned. Table <a href="#tab:ghg">1</a> shows changes made to the sheet containing the main data.</p>
 <table class=" lightable-paper" style="font-family: &quot;Arial Narrow&quot;, arial, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;border-bottom: 0;">
+<caption>
+<span id="tab:ghg">Table 1: </span>Changes made to greenhouse gas emission data in both Excel and R.
+</caption>
 <thead>
 <tr>
 <th style="text-align:left;">
@@ -1823,9 +1825,11 @@ Changed data type for ‘year’ from chr to dbl
 </tfoot>
 </table>
 <p>Note that Venezuela (VEN) did not have a value for income group in the metadata sheet, “Venezuela, previously classified as an upper-middle income country, is now unclassified due to a lack of available data in the recent period” (World Bank, 2022).</p>
-<p>Secondly, the Excel workbook containing data for the populations was prepared and cleaned. Table 2 shows changes made to the sheet containing the main data.</p>
-<p>Table 2. Changes made to population data in both Excel and R.</p>
+<p>Secondly, the Excel workbook containing data for the populations was prepared and cleaned. Table <a href="#tab:pop">2</a> shows changes made to the sheet containing the main data.</p>
 <table class=" lightable-paper" style="font-family: &quot;Arial Narrow&quot;, arial, helvetica, sans-serif; width: auto !important; margin-left: auto; margin-right: auto;border-bottom: 0;">
+<caption>
+<span id="tab:pop">Table 2: </span>Changes made to population data in both Excel and R.
+</caption>
 <thead>
 <tr>
 <th style="text-align:left;">
