Changed caption color and removed size alternation

--- a/index.html
+++ b/index.html
@@ -1697,7 +1697,7 @@ border-radius: 0px;
 
 <style>
 p.caption {
-font-size: 0.9em;
+color: #757171;
 }
 </style>
 <div id="introduction" class="section level1" number="1">
